--- a/index.html
+++ b/index.html
@@ -140,7 +140,11 @@
     </div>
     <footer>
         <div class="col-sm-4">
-            <p>Copyrights 2017 | All rights reserved Coders Lab</p>
+            <center>
+                <br>
+                <button class="btn btn-secondary back-button" type="button">Wróć na górę</button>
+                <p>Copyrights 2017 | All rights reserved Coders Lab</p>
+            </center>
         </div>
     </footer>
 </body>
